--- a/src/index.css
+++ b/src/index.css
@@ -14,10 +14,10 @@
 
 /*Variables*/
 :root {
-    --color-bg: #1a2919;
-    --color-bg-varient: #045801;
-    --color-primary: #b1e600;
-    --color-primary-varient: #667735;
+    --color-bg: #291927;
+    --color-bg-varient: #580142;
+    --color-primary: #ff51f3;
+    --color-primary-varient: #683460;
     --color-white: #fff;
     --color-light: #939b79;
 
